--- a/OnTheMap/Storyboards/Base.lproj/Login.storyboard
+++ b/OnTheMap/Storyboards/Base.lproj/Login.storyboard
@@ -47,6 +47,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="yNI-NC-cNN"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                         <state key="normal" title="LOG IN">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
